--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
    - POSTGRES_USER=${POSTGRES_USER}
    - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
   networks:
-   - CRUD
+   - crud
   volumes:
    - ".:/app"
   # command: "./startup.sh"
